--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start -p 3000",
     "lint": "next lint"
   },
+  "engines": {
+    "npm": ">=8.5.1",
+    "node": ">=17.6.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
