--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "engines": {
-    "npm": ">=8.5.1",
-    "node": ">=17.6.0"
+    "npm": "8.5.1",
+    "node": "17.6.0"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
