--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
     "@types/yup": "^0.29.14",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
